@@ -1,3 +1,12 @@
+2015-10-22  Oliver Lemke  <olemke@core-dump.info>
+
+	* arts-2-3-346
+
+	* src/m_sensor.cc (f_gridMetMM):
+
+	Replaced "manual" frequency sorting with more optimized STL sort
+	algorithm after discussion with Patrick.
+
 2015-10-21  Patrick Eriksson  <patrick.eriksson@chalmers.se>
 
 	* arts-2-3-345
